--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,7 @@
 html {
   box-sizing: border-box;
   scroll-behavior: smooth;
+  animation: transitionIn 1s;
 }
 
 *,
@@ -615,5 +616,16 @@ a {
   }
   100% {
     opacity: 1;
+  }
+}
+
+@keyframes transitionIn {
+  from {
+    opacity: 0;
+    transform: rotateY(-10deg);
+  }
+  to {
+    opacity: 1;
+    transform: rotateY(0g);
   }
 }
