--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,8 +22,7 @@
   --text-primary: #ee991a;
 
   /* Typografia */
-  --body-font: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  --body-font: "Ubuntu", sans-serif;
   --big-font-size: 32px;
   --normal-font-size: 16px;
   --small-font-size: 14px;
@@ -90,6 +89,7 @@ ul {
 
 a {
   text-decoration: none;
+  color: inherit;
 }
 
 img {
@@ -140,7 +140,7 @@ img {
   top: 0;
   left: 0;
   width: 100%;
-  background-color: #504737;
+  background-color: #0005;
   box-shadow: var(--box-shadow);
   z-index: var(--z-fixed);
 }
@@ -170,6 +170,7 @@ img {
   display: flex;
   align-items: center;
   column-gap: 0.25rem;
+  font-size: 1.2rem;
   font-weight: var(--font-semi-bold);
   color: #d0b886;
 }
@@ -221,9 +222,9 @@ img {
 
 /* ============= Home ============= */
 .home {
-  /* background: linear-gradient(260deg, #e6b325, #bf9742, #61481c);
-  background-size: 180% 180%;
-  animation: gradient-animation 6s ease infinite; */
+  height: 100vh;
+  display: flex;
+  align-items: center;
 }
 
 .home__container {
@@ -280,13 +281,17 @@ img {
   animation: fade-in 2s ease;
   visibility: visible;
   -webkit-backface-visibility: hidden;
+  display: flex;
+  justify-content: center;
+  transform: translate(0px, -50px);
 }
 
 /* ============= About ============= */
 .about {
-  /* background: linear-gradient(77deg, #bf9742, #9b7021, #ba9345);
-  background-size: 180% 180%;
-  animation: gradient-animation 9s ease infinite; */
+  padding-top: 3rem;
+  height: 100vh;
+  display: flex;
+  align-items: center;
 }
 
 .about__description {
@@ -306,9 +311,16 @@ img {
 
 .about__card {
   background-color: #504737;
+  /* background-image: url("/assets/img/projectCard1.png"); */
+
   padding: 4rem 2rem 2rem;
   border-radius: 5px;
   box-shadow: var(--box-shadow);
+  transition: linear 0.5s;
+}
+.about__card:hover,
+.about__tag:hover {
+  transform: scale(1.1);
 }
 
 .about__card .bx {
@@ -333,6 +345,7 @@ img {
   color: #d0b886;
   background-color: #504737;
   border-radius: 5px;
+  transition: linear 0.3s;
 }
 
 a {
