--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,7 +222,7 @@ img {
 
 /* ============= Home ============= */
 .home {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   align-items: center;
 }
@@ -289,7 +289,7 @@ img {
 /* ============= About ============= */
 .about {
   padding-top: 3rem;
-  height: 100vh;
+  min-width: 100vh;
   display: flex;
   align-items: center;
 }
@@ -471,6 +471,11 @@ a {
 }
 
 /* ============= Media Queries ============= */
+@media screen and (max-width: 768px) {
+  .fade-in {
+    transform: translate(0, 0);
+  }
+}
 @media screen and (min-width: 768px) {
   .section {
     padding: 6rem 0 5rem;
